# CRApi

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml  unit_tests.yaml
src/crapi/: __init__.py  client.py  exceptions.py
src/crapi/commons/: utils.py
src/crapi/errors/: api.py
src/crapi/http/: __init__.py  client.py  exception.py
src/crapi/models/: __init__.py  arena.py  clan.py  clan_current_war.py  clan_member.py  clan_war_clan.py  clan_war_log.py  clan_war_participant.py  clan_war_standing.py  location.py  period_log.py  period_log_entry.py  period_log_entry_clan.py  player.py  river_race_clan.py  river_race_current.py  river_race_log.py  river_race_participant.py  river_race_standing.py
src/crapi/resources/: __init__.py  clans.py  locations.py  players.py
src/tests/test_commons/: test_utils.py
